<resources>
    <string name="app_name">Caixa de supermercado</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_informacao">InformacaoActivity</string>
    <string name="descricao_app">Esse aplicativo vai te ajudar a calcular o preço dos seus produtos! Para isso digite o nome do produto, a quantidade, valor e por fim clicque no botão de calcular para verificar o valor da sua compra!</string>
    <string name="nome_produto">Nome do produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor_unitario">Valor unitário</string>
    <string name="button_calcular">CALCULAR</string>
    <string name="titulo_home">Caixa supermercado</string>
    <string name="carrinho_vermelho_vetorizado_de_supermercado">Carrinho vermelho vetorizado de supermercado</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_do_produto">Valor do produto</string>
    <string name="quantidade_do_produto">Quantidade do produto</string>
    <string name="app_description">Esse aplicativo vai te ajudar a calcular o preço dos seus produtos! Para isso digite o nome do produto, a quantidade, valor e por fim clicque no botão de calcular para verificar o valor da sua compra!</string>
    <string name="carrinho_compras_image_description">Carrinho de compras vermelho vetorizado</string>
    <string name="button_refazer_compra">REFAZER COMPRA</string>
    <string name="valor_total">Valor total</string>
    <string name="caixa_supermercado">Caixa de supermercado</string>
    <string name="detalhe_compra">Detalhe da compra</string>
</resources>