<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.caixadesupermercado.home.HomeActivity"
    android:padding="16dp">

        <ImageView
            android:id="@+id/ivCarrinho"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="140dp"
            android:src="@drawable/carrinho"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Carrinho vermelho de supermercado" />

        <TextView
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:text="@string/descricao_app"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/ivCarrinho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivCarrinho"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:hint="@string/nome_produto"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCarrinho" />

        <EditText
            android:id="@+id/editQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:hint="@string/quantidade"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNomeProduto" />


        <EditText
            android:id="@+id/edit_valorUnitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:hint="@string/valor_unitario"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editQuantidade" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_calcular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_valorUnitario" />
</androidx.constraintlayout.widget.ConstraintLayout>